Adding integration with SheetsService
Adding service to call Google Sheets for our trip spreadsheet. Service
returns gps points for planned route.